Set default popup and overlay z-index high enough to ensure it was above admin menus, bars etc. #5

--- a/assets/styles/popup-maker-admin.css
+++ b/assets/styles/popup-maker-admin.css
@@ -405,7 +405,12 @@ div.popmake-upgrade-tip {
 }
 
 
-
+#popmake-preview {
+	z-index: 9999999!important;
+}
+#popmake-overlay {
+	z-index: 9999998!important;
+}
 
 
 /* Extensions Page */
